fixed mobile canvas sizing, removed pinch zoom in-out on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -508,12 +508,6 @@ input[type="radio"]:focus, :focus, :checked {
     #view-input-orthographic::after {
       display: none; } }
 
-#main-canvas {
-  width: 100%;
-  min-height: 450px;
-  height: 70vh;
-  position: relative; }
-
 canvas {
   width: 100%;
   height: 100%;
