--- a/assets/sass/components/_main-canvas.scss
+++ b/assets/sass/components/_main-canvas.scss
@@ -1,9 +1,10 @@
-#main-canvas{
-    width: 100%;
-    min-height: 450px;
-    height: 70vh;
-    position: relative;
-}
+// #main-canvas{
+//     width: 100%; 
+//     min-height: 450px;
+//     height: 70vh;
+//     position: relative;
+//     background: pink;
+// }
 
 canvas {
     width: 100%;
